[package]
name = "clone_cell"
version = "0.4.1"
edition = "2021"
authors = ["vchlin"]
license = "MIT OR Apache-2.0"
description = "A Cell that works with a restrictive form of Clone"
repository = "https://github.com/vchlin/clone_cell"
documentation = "https://docs.rs/clone_cell"
readme = "README.md"
keywords = ["clone", "cell", "mutability"]

[features]
default = ["derive"]
derive = ["clone_cell_derive"]

[dependencies]
clone_cell_derive = { version = "0.2.1", path = "derive", optional = true }

[dev-dependencies]
trybuild = "1.0.101"

[workspace]
members = ["derive"]
