[package]
name = "clone_cell_derive"
version = "0.1.1"
edition = "2018"
authors = ["Vektorlynk"]
license = "MIT OR Apache-2.0"
description = "Proc macro for clone_cell"
repository = "https://github.com/Vektorlynk/clone_cell"
documentation = "https://docs.rs/clone_cell_derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = "1.0.76"